<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_vet6"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".controller.StartScreenActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:src="@drawable/main_menu_image"/>

    <TextView
        android:id="@+id/start_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/title"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"/>

    <Button
        android:id="@+id/odds_button"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:text="@string/oddscalate"
        android:textColor="@color/darkGreen"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/quiz_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/quiz"
        android:padding="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/darkGreen"
        android:textSize="20sp"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/login"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/darkGreen"
        android:textSize="20sp"/>

        <Button
            android:padding="20dp"
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/register"
            android:textColor="@color/darkGreen"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/register_sing_out"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/sign_out"
            android:padding="20dp"
            android:visibility="gone"
            android:textColor="@color/darkGreen"
            android:textSize="20sp"/>

    </LinearLayout>



</LinearLayout>
